<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="video_section_title">Video Section</string>
    <string name="select_source">Select Video Source</string>
    <string name="local_videos">Local Videos</string>
    <string name="local_videos_desc">Play local storage files</string>
    <string name="online_videos">Online Videos</string>
    <string name="online_videos_desc">Stream trending content</string>
    <string name="trending_music">Trending Music</string>
    <string name="back_button_desc">Go Back</string>
    <string name="play_pause_desc">Play or Pause</string>
    <string name="next_desc">Next Video</string>
    <string name="prev_desc">Previous Video</string>
    <string name="shuffle_desc">Shuffle</string>
    <string name="repeat_desc">Repeat</string>
    <string name="thumbnail_desc">Video Thumbnail</string>
    <string name="loading_title">Video Title Loading...</string>
    <string name="channel_name">Channel Name</string>
    <string name="video_title">Video Title</string>
    <string name="channel">Channel</string>
    <string name="zero_time">00:00</string>
    <string name="volume_label">Volume: 50%</string>
    <string name="fullscreen_desc">Toggle Fullscreen</string>
    <string name="equalizer_desc">Open Equalizer</string>
    <string name="hd_desc">High Definition Audio</string>
    <string name="booster_desc">Sound Booster</string>
</resources>